<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E2A34E "
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_5"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/txtEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_edad"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnEditarPerfil"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/edit_profile_button"
        android:textColor="@android:color/black"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="16dp" />

</LinearLayout>