<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFF157"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_3"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/doctor_name"
        android:textColor="#33691E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/patient_name"
        android:textColor="#33691E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/appointment_time"
        android:textAlignment="center"
        android:textColor="#33691E"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAgendarCita"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/schedule_button"
        android:textColor="@color/black" />

</LinearLayout>