<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#26EBF5">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_1"
        app:tint="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/inicio_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_description"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:layout_marginTop="8dp"
        android:textAlignment="center" />


    <Button
        android:id="@+id/btnEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Emergencia" />

    <Button
        android:id="@+id/btnCitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Citas" />


</LinearLayout>