<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F22626">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_2"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergencia_title"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#220A0A"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/emergencia_description"
        android:textAlignment="center"
        android:textColor="#372727 "
        android:textSize="16sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_4"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/btnCallEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Llamar al número de emergencia" />

    <Button
        android:id="@+id/btnSendAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar alerta de emergencia" />

</LinearLayout>